# LusionSmartReverb

./: CMakeLists.txt  LUSIONBEATZSMARTREVERB.jucer  PluginProcessor.cpp  PluginProcessor.h  ReverbEngine.cpp  ReverbEngine.h  build-mac.yml
JuceLibraryCode/: BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: BPMUtils.h  PluginEditor.cpp  PluginEditor.h
